--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,14 +21,11 @@ env:
     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
     DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # ===== Environment variables =====
-    ODOO_IMAGE_TAG: ${{ vars.ODOO_IMAGE_TAG }}
-
 jobs:
     build:
         name: build
         runs-on: ubuntu-latest
-        environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
+        environment: ${{inputs.repo_name}}/${{github.event.repository.default_branch}}
         steps:
             - name: Checkout private repo
               uses: actions/checkout@v4
