update build workflow file

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,11 +16,6 @@ env:
     REPO_PATH: ${{ github.workspace }}
     BUILD_PATH: ${{ github.workspace }}/.build
 
-    # ==== Repository secrets ====
-    SSH_KEY_GITHUB: ${{secrets.SSH_KEY_GITHUB}}
-    DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-    DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-
 jobs:
     build:
         name: build
@@ -31,7 +26,7 @@ jobs:
               uses: actions/checkout@v4
               with:
                   repository: ${{ inputs.repo_name }}
-                  ssh-key: ${{ env.SSH_KEY_GITHUB }}
+                  ssh-key: ${{ secrets.SSH_KEY_GITHUB }}
                   path: ${{ env.REPO_PATH }}
                   ref: ${{ inputs.commit_sha }}
                   fetch-depth: 1
@@ -39,11 +34,12 @@ jobs:
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
-                  username: ${{ env.DOCKERHUB_USERNAME }}
-                  password: ${{ env.DOCKERHUB_TOKEN }}
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Build & Publish image
               run: |
+                  echo ${{github.event.repository.default_branch}}
                   cd ${{ env.BUILD_PATH }}
                   docker build -t ${{ env.ODOO_IMAGE_TAG }} .
                   docker push ${{ env.ODOO_IMAGE_TAG }}
