--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -39,7 +39,7 @@ jobs:
 
             - name: Build & Publish image
               run: |
-                  echo ${{github.event.repository.default_branch}}
+                  echo ${{inputs.default_branch}}
                   cd ${{ env.BUILD_PATH }}
                   docker build -t ${{ env.ODOO_IMAGE_TAG }} .
                   docker push ${{ env.ODOO_IMAGE_TAG }}
