--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -41,6 +41,7 @@ jobs:
               run: |
                   echo ${{inputs.default_branch}}
                   echo ${{github.event.repository.default_branch}}
+                  echo ${{inputs.repo_name}}/${{inputs.default_branch}}
                   cd ${{ env.BUILD_PATH }}
                   docker build -t ${{ env.ODOO_IMAGE_TAG }} .
                   docker push ${{ env.ODOO_IMAGE_TAG }}
