--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,6 +42,8 @@ jobs:
                   echo ${{inputs.default_branch}}
                   echo ${{github.event.repository.default_branch}}
                   echo ${{inputs.repo_name}}/${{inputs.default_branch}}
+                  echo ${{env.ODOO_IMAGE_TAG}}
+                  echo ${{env.SERVER_DEPLOY_PATH}}
                   cd ${{ env.BUILD_PATH }}
                   docker build -t ${{ env.ODOO_IMAGE_TAG }} .
                   docker push ${{ env.ODOO_IMAGE_TAG }}
