--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -39,11 +39,6 @@ jobs:
 
             - name: Build & Publish image
               run: |
-                  echo ${{inputs.default_branch}}
-                  echo ${{github.event.repository.default_branch}}
-                  echo ${{inputs.repo_name}}/${{inputs.default_branch}}
-                  echo ${{env.ODOO_IMAGE_TAG}}
-                  echo ${{env.SERVER_DEPLOY_PATH}}
                   cd ${{ env.BUILD_PATH }}
-                  docker build -t ${{ env.ODOO_IMAGE_TAG }} .
-                  docker push ${{ env.ODOO_IMAGE_TAG }}
+                  docker build -t ${{ vars.ODOO_IMAGE_TAG }} .
+                  docker push ${{ vars.ODOO_IMAGE_TAG }}
