--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: build-docker-image
+run-name: Repository ${{inputs.repo_name}} - Build docker image
 on:
     workflow_dispatch:
         inputs:
