--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -78,6 +78,7 @@ jobs:
         runs-on: ubuntu-latest
         env:
             commit_context: CI/CD - Unit Test At Install
+            repo_name: ${{inputs.repo_name}}
         environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
         if: inputs.action == 'test' || inputs.action == 'deploy'
         steps:
@@ -86,19 +87,21 @@ jobs:
               uses: actions/github-script@v6
               with:
                   debug: true
+                  github-token: ${{ secrets.PAT_COMMIT_STATUS }}
                   script: |
                       console.log(context.repo.owner);
                       console.log(context.repo.repo);
                       console.log(context.sha);
-                      const { INPUT_REPO, INPUT_SHA } = process.env
+                      let { repo_name } = process.env
+                      const {owner, repo} = repo_name.split('/');
 
-                      console.log(INPUT_REPO);
-                      console.log(INPUT_SHA);
+                      console.log(owner);
+                      console.log(repo);
 
                       const response = await github.rest.checks.create({
-                          owner: context.repo.owner,
-                          repo: context.repo.repo,
-                          head_sha: context.sha,
+                          owner: owner,
+                          repo: repo,
+                          head_sha: INPUT_SHA,
                           name: "oh yeahhhhh",
                           status: "in_progress"
                       });
