--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -91,10 +91,8 @@ jobs:
                   github-token: ${{ secrets.PAT_COMMIT_STATUS }}
                   script: |
                       const inputs = ${{ toJSON(inputs) }};
-                      console.log(inputs);
-
-                      const { commit_context, repo_name, commit_sha } = process.env
-                      const {owner, repo} = repo_name.split('/')
+                      const {owner, repo} = inputs.repo_name.split('/');
+                      const commit_sha = inputs.commit_sha;
 
                       console.log(owner);
                       console.log(repo);
