--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -117,7 +117,6 @@ jobs:
                   github-token: ${{ secrets.PAT_COMMIT_STATUS }}
                   script: |
 
-                      //   const {default: createRunCheck} = await import('${{ github.workspace }}/.github/src/script.js')
-                      import { createRunCheck } from '${{ github.workspace }}/.github/src/script.js';
+                      const {createRunCheck} = await import('${{ github.workspace }}/.github/src/script.js')
                       const inputs = ${{ toJSON(inputs) }};
                       await createRunCheck(inputs)
