--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -71,16 +71,14 @@ env:
     SERVER_ODOO_DB_NAME: ${{ vars.SERVER_ODOO_DB_NAME }}
 
     # ======= INPUT for actions/github-script ========
-    INPUT_REPO: ${{inputs.repo_name}}
-    INPUT_SHA: ${{inputs.commit_sha}}
+    # INPUT_REPO: ${{inputs.repo_name}}
+    # INPUT_SHA: ${{inputs.commit_sha}}
 jobs:
     unit-test-at-install:
         name: ${{inputs.repo_name}} - Unit test at install
         runs-on: ubuntu-latest
         env:
             commit_context: CI/CD - Unit Test At Install
-            repo_name: ${{inputs.repo_name}}
-            commit_sha: ${{inputs.commit_sha}}
         environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
         if: inputs.action == 'test' || inputs.action == 'deploy'
         steps:
