--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -70,9 +70,6 @@ env:
     SERVER_ODOO_URL: ${{ vars.SERVER_ODOO_URL }}
     SERVER_ODOO_DB_NAME: ${{ vars.SERVER_ODOO_DB_NAME }}
 
-    # ======= INPUT for actions/github-script ========
-    # INPUT_REPO: ${{inputs.repo_name}}
-    # INPUT_SHA: ${{inputs.commit_sha}}
 jobs:
     unit-test-at-install:
         name: ${{inputs.repo_name}} - Unit test at install
@@ -82,7 +79,7 @@ jobs:
         environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
         if: inputs.action == 'test' || inputs.action == 'deploy'
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
             - uses: actions/github-script@v7
               id: create-run-check
               with:
@@ -91,3 +88,44 @@ jobs:
                       const {createRunCheck} = await import('${{ github.workspace }}/.github/src/script.js')
                       const inputs = ${{ toJSON(inputs) }}
                       return await createRunCheck(github, inputs, "Unit test at install", "in_progress")
+
+            - name: Checkout private repo
+              uses: actions/checkout@v4
+              with:
+                  repository: ${{ env.REPOSITORY }}
+                  ssh-key: ${{ env.SSH_KEY_GITHUB }}
+                  path: ${{ env.REPO_PATH }}
+                  ref: ${{ inputs.commit_sha }}
+                  fetch-depth: 1
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Run Unit test cases
+              id: run_post_install_unit_test
+              run: |
+                  bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
+
+            - uses: actions/github-script@v7
+              id: update-run-check
+              with:
+                  github-token: ${{ env.APP_ACCESS_TOKEN }}
+                  script: |
+                      const run_check_id = "${{steps.create-run-check.outputs.result}}";
+                      const status = ${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
+                      const {updateRunCheck} = await import('${{ github.workspace }}/.github/src/script.js')
+                      const inputs = ${{ toJSON(inputs) }}
+                      return await updateRunCheck(github, inputs, run_check_id, status)
+
+            # - name: Set final commit status
+            #   if: ${{always()}}
+            #   uses: myrotvorets/set-commit-status-action@master
+            #   with:
+            #       repo: ${{ inputs.repo_name }}
+            #       sha: ${{ inputs.commit_sha }}
+            #       token: ${{ secrets.PAT_GITHUB }}
+            #       status: ${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
+            #       context: ${{ env.commit_context }}
