--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -114,18 +114,8 @@ jobs:
               with:
                   github-token: ${{ env.APP_ACCESS_TOKEN }}
                   script: |
-                      const run_check_id = "${{steps.create-run-check.outputs.result}}";
-                      const conclusion = ${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
+                      const run_check_id = "${{steps.create-run-check.outputs.result}}"
+                      const conclusion = "${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
                       const {updateRunCheck} = await import('${{ github.workspace }}/.github/src/script.js')
                       const inputs = ${{ toJSON(inputs) }}
                       return await updateRunCheck(github, inputs, run_check_id, status="completed", conclusion)
-
-            # - name: Set final commit status
-            #   if: ${{always()}}
-            #   uses: myrotvorets/set-commit-status-action@master
-            #   with:
-            #       repo: ${{ inputs.repo_name }}
-            #       sha: ${{ inputs.commit_sha }}
-            #       token: ${{ secrets.PAT_GITHUB }}
-            #       status: ${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
-            #       context: ${{ env.commit_context }}
