--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -109,6 +109,7 @@ jobs:
               run: |
                   bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
 
+            - uses: actions/checkout@v4
             - uses: actions/github-script@v7
               id: update-run-check
               with:
@@ -116,6 +117,8 @@ jobs:
                   script: |
                       const run_check_id = "${{steps.create-run-check.outputs.result}}"
                       const conclusion = "${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
+                      console.log(run_check_id)
+                      console.log(conclusion)
                       const {updateRunCheck} = await import('${{ github.workspace }}/.github/src/script.js')
                       const inputs = ${{ toJSON(inputs) }}
                       return await updateRunCheck(github, inputs, run_check_id, status="completed", conclusion)
