--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -80,7 +80,9 @@ jobs:
         if: inputs.action == 'test' || inputs.action == 'deploy'
         steps:
             - uses: actions/checkout@v4
+
             - uses: actions/github-script@v7
+              name: Create Run Check
               id: create-run-check
               with:
                   github-token: ${{ env.APP_ACCESS_TOKEN }}
@@ -109,9 +111,10 @@ jobs:
               run: |
                   bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
 
-            - uses: actions/checkout@v4
-              with:
-                  path: ${{ github.sha }}
+            # - uses: actions/checkout@v4
+            #   with:
+            #       path: ${{ github.sha }}
+
             - uses: actions/github-script@v7
               id: update-run-check
               with:
