--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -100,16 +100,16 @@ jobs:
                   ref: ${{ inputs.commit_sha }}
                   fetch-depth: 1
 
-            - name: Login to Docker Hub
-              uses: docker/login-action@v3
-              with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+            # - name: Login to Docker Hub
+            #   uses: docker/login-action@v3
+            #   with:
+            #       username: ${{ secrets.DOCKERHUB_USERNAME }}
+            #       password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Run Unit test cases
-              id: run_post_install_unit_test
-              run: |
-                  bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
+            # - name: Run Unit test cases
+            #   id: run_post_install_unit_test
+            #   run: |
+            #       bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
 
             # - uses: actions/checkout@v4
             #   with:
