--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -111,9 +111,9 @@ jobs:
             #   run: |
             #       bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
 
-            # - uses: actions/checkout@v4
-            #   with:
-            #       path: ${{ github.sha }}
+            - uses: actions/checkout@v4
+              with:
+                  path: ${{ github.sha }}
 
             - uses: actions/github-script@v7
               id: update-run-check
