--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -118,6 +118,7 @@ jobs:
             - uses: actions/github-script@v7
               id: update-run-check
               with:
+                  debug: true
                   github-token: ${{ env.APP_ACCESS_TOKEN }}
                   script: |
                       const {default: script} = await import('${{ github.workspace }}/.github/src/script.js')
